[package]
name = "aster_rs"
version = "0.1.0"
edition = "2021"
authors = ["Anish Bhobe <anishbhobe@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
ash = "0.33"
ash-window = "0.7"
cgmath = "0.18"
image = "0.23"
tobj = "3.2"
ahash = "0.7.6"
winit = "0.25"
winapi = "0.3.9"